example/lib/src/arbs/errors/app_cs.arb
{
  "@@locale": "cs",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Došlo k chybě",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Došlo k neočekávané chybě",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Hlášení o chybě bylo úspěšně odesláno.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}